--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@ngrx/entity": "^17.0.1",
     "@ngrx/store": "^17.0.1",
     "@ngrx/store-devtools": "^17.0.1",
+    "angular-star-rating": "^7.0.0",
+    "css-star-rating": "^1.3.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
