--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular-star-rating": "^7.0.0",
     "css-star-rating": "^1.3.1",
     "ngx-drag-scroll": "^17.0.1",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
